# simplelibrary

./: pyproject.toml
simplelibrary/: __init__.py  initials.py
tests/: test_simplelibrary.py
