[tool.poetry]
name = "simplelibrary"
version = "1.2.0"
description = ""
authors = ["paritosh baghel <paritoshmmmec@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
